--- a/style.css
+++ b/style.css
@@ -9,16 +9,22 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 21px;
 }
 
 .container {
     background-color: #FFFFFF;
-    width: 870px;
+    width: 810px;
     padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 5px;
 }
 
 .section-title {
+    margin-top: 30px;
     color: #562EFF;
     font-size: 24px;
 }
@@ -27,6 +33,8 @@ main {
 .teachers {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    margin-bottom: 30px;
 }
 
 /* teacher style  */
@@ -34,4 +42,47 @@ main {
     display: flex;
     align-items: center;
 
+}
+
+.teachers_name {
+    margin-left: 16px;
+    font-size: 18px;
+}
+
+hr{
+    border: 1px solid #D1D1D1;
+}
+
+/* top blogs styles */
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 50px;
+}
+
+.blog {
+    display: flex;
+}
+
+.blog-info {
+    margin-left: 16px;
+}
+
+.blog-title {
+    font-size: 20px;
+}
+
+.author {
+    color: #9F9F9F;
+    font-size: 16px;
+}
+
+.author a {
+    text-decoration: none;
+    color: #562EFF;
+}
+
+/* course section */
+.courses{
+    display: flex;
 }
